src/test/ui/error-codes/E0612.stderr
error[E0612]: attempted out-of-bounds tuple index `1` on type `Foo`
  --> $DIR/E0612.rs:15:4
   |
LL |    y.1; //~ ERROR E0612
   |    ^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0612"
